test/files/neg/t6123-explaintypes-macros.check
c.universe.Expr[Any]* <: c.universe.Expr[String]*?
false
BadMac_2.scala:6: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.blackbox.Context)(format: c.Expr[String], params: c.Expr[Any]*): c.Expr[Unit]
 or      : (c: scala.reflect.macros.blackbox.Context)(format: c.Tree, params: Tree*): c.Tree
 found   : (c: scala.reflect.macros.blackbox.Context)(format: c.Expr[String], params: c.Expr[String]*): c.Expr[Unit]
type mismatch for parameter params: c.Expr[Any]* does not conform to c.Expr[String]*
  def printf(format: String, params: Any*): Unit = macro printf_impl
                                                         ^
one error found
